# nbody

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: body.c  body.h  main.c  nbody.c  nbody.h  threadpool.c  threadpool.h
